// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <label
          for="downshift-0-input"
          id="downshift-0-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-0-menu"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-0-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-0-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-7-menu"
        role="combobox"
      >
        <label
          for="downshift-7-input"
          id="downshift-7-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 iRRxpY"
          disabled=""
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-7-menu"
              aria-labelledby="downshift-7-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures text-theme-secondary-text"
              data-testid="SelectDropdown__input"
              disabled=""
              id="downshift-7-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-7-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-7-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          aria-invalid="true"
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="sc-bdfBwQ iyevwF text-theme-danger-500"
            height="20"
            width="20"
          >
            <svg>
              alert-warning.svg
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-5-menu"
        role="combobox"
      >
        <label
          for="downshift-5-input"
          id="downshift-5-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-5-menu"
              aria-invalid="true"
              aria-labelledby="downshift-5-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-5-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="sc-bdfBwQ iyevwF text-theme-danger-500"
                height="20"
                width="20"
              >
                <svg>
                  alert-warning.svg
                </svg>
              </div>
            </span>
            <div
              class="pl-3"
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-danger-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-5-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-5-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with custom label 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <label
          for="downshift-2-input"
          id="downshift-2-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-labelledby="downshift-2-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-2-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR is-open"
          id="downshift-2-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--0"
            id="downshift-2-item-0"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 1
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--1"
            id="downshift-2-item-1"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 2
              </span>
            </div>
          </li>
          <li
            aria-selected="false"
            class="select-list-option"
            data-testid="SelectDropdown__option--2"
            id="downshift-2-item-2"
            role="option"
          >
            <div
              class="select-list-option__label"
            >
              <span>
                Label Option 3
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      3
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-130-menu"
        role="combobox"
      >
        <label
          for="downshift-130-input"
          id="downshift-130-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          3
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-130-menu"
              aria-labelledby="downshift-130-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-130-input"
              placeholder="Select option"
              value="3"
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-130-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-130-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-20-menu"
        role="combobox"
      >
        <label
          for="downshift-20-input"
          id="downshift-20-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-20-menu"
              aria-labelledby="downshift-20-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-20-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-20-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-20-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      3
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value="3"
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-15-menu"
        role="combobox"
      >
        <label
          for="downshift-15-input"
          id="downshift-15-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          Option 3
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-15-menu"
              aria-labelledby="downshift-15-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-15-input"
              placeholder="Select option"
              value="Option 3"
            />
            <span
              class="flex absolute inset-y-0 items-center w-full font-normal opacity-50 pointer-events-none"
              data-testid="Input__suggestion"
            >
              <span
                class="truncate"
              >
                Option 3
              </span>
            </span>
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-15-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-15-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-22-menu"
        role="combobox"
      >
        <label
          for="downshift-22-input"
          id="downshift-22-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-22-menu"
              aria-labelledby="downshift-22-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-22-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-22-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-22-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-18-menu"
        role="combobox"
      >
        <label
          for="downshift-18-input"
          id="downshift-18-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-18-menu"
              aria-labelledby="downshift-18-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-18-input"
              placeholder="Select option"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
          >
            <div
              class=""
            >
              <div
                class="flex justify-center items-center py-2 px-1"
                data-testid="SelectDropdown__caret"
              >
                <div
                  class="transition-transform sc-bdfBwQ gLRWTb text-theme-secondary-500"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <ul
          aria-labelledby="downshift-18-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-18-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render without caret 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="fixed invisible w-auto whitespace-nowrap"
    >
      
      …
    </div>
    <div
      class="sr-only Input__InputWrapperStyled-wu99qs-0 jYUFQr"
    >
      <div
        class="flex relative flex-1 h-full"
      >
        <input
          class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          value=""
        />
      </div>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-9-menu"
        role="combobox"
      >
        <label
          for="downshift-9-input"
          id="downshift-9-label"
        />
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-9-menu"
              aria-labelledby="downshift-9-label"
              autocomplete="off"
              class="p-0 w-full bg-transparent border-none cursor-default focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
              data-testid="SelectDropdown__input"
              id="downshift-9-input"
              placeholder="Select option"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="downshift-9-label"
          class="styles__SelectOptionsList-b2falt-0 dyOwRR"
          id="downshift-9-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
